hacky overflow fix eh-

--- a/src/include/style.css
+++ b/src/include/style.css
@@ -6,8 +6,8 @@
 
 html, body
 {
-    width: 100vw;
-    height: 100%;
+    width: 100%;
+    height: 100%; overflow-y: hidden;
 }
 
 body
